# traffic-light-display

./: .gitignore  CHS_lights_esp32_ws2812_BasicOTA.ino  CODEOWNERS  Cargo.toml  LICENSE  README.md  sdkconfig.defaults
.cargo/: config.toml
cad/: case_composite.scad  case_foot.scad  finger_joint_panel.scad  l_bracket.scad  panel_back.scad  panel_bottom.scad  panel_front.scad  panel_side.scad  panel_top.scad  project_vars.scad
scripts/: 000_ddp_test.py  001_ddp_gif.py  002_ddp_marquee.py
src/: display.rs  main.rs
